--- a/client/src/pages/Game/Game.css
+++ b/client/src/pages/Game/Game.css
@@ -72,7 +72,7 @@ body {
 	width: 80%;
 	height: 80%;
 	background-color: #D4D4D4;
-	background-image: url("../aarow.png");
+	background-image: url("./aarow.png");
 	margin-left: 10px;
 	width: 50px;
 	height: 50px;
