rewrite authentication so it no longer requires firebase

--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -44,7 +44,7 @@ form.login button[type="submit"] {
   color: white;
 }
 
-#emailOrUsername {
+#username {
 	margin-bottom: 15px;
 	outline: none;
   color: white;
